kubernetes_tasks/session4/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: FE
---
apiVersion: v1
kind: Namespace
metadata:
  name: mongo-db
---
apiVersion: v1
kind: Namespace
metadata:
  name: mongo-express
