kubernetes_tasks/session4/FE_deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fe-namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe
  namespace: fe-namespace
  labels:
    app: fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fe
  template:
    metadata:
      labels:
        app: fe
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: fe-volume
      volumes:
      - name: fe-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: fe-namespace
spec:
  type: NodePort
  selector:
    app: fe
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
