kubernetes_tasks/session4/mongo-express-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mongo-express
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-deployment
  namespace: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-ex
  template:
    metadata:
      labels:
        app: mongo-ex
    spec:
      containers:
      - name: mongo-express
        image: mongo-express:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: mongo-express
spec:
  type: NodePort
  selector:
    app: mongo-ex
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30081
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mongo-express
  namespace: mongo-db
spec:
  podSelector:
    matchLabels:
      app: mongodb
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mongo-express
      ports:
        - protocol: TCP
          port: 27017
  policyTypes:
    - Ingress
